# calendarchy

./: CLAUDE.md  Cargo.toml  calendarchy.desktop  jest.config.js  package-lock.json  package.json  terminal-calendar.desktop  tsconfig.json
src/: App.tsx  app.rs  auth.rs  cache.rs  config.rs  conversion.rs  error.rs  index.tsx  logging.rs  main.rs  ui.rs  utils.rs
src/cache/: event-cache.ts
src/components/: AuthPrompt.tsx  CalendarGrid.tsx  ConfirmModal.tsx  EventDetails.tsx  EventPanel.tsx  StatusBar.tsx
src/config/: loader.ts  paths.ts  tokens.ts
src/google/: auth.rs  calendar.rs  mod.rs  types.rs
src/hooks/: useCache.ts  useEventFetch.ts  useGoogleAuth.ts  useICloudAuth.ts  useKeyboard.ts  useNavigation.ts
src/icloud/: auth.rs  calendar.rs  mod.rs  types.rs
src/services/: meeting-url.ts
src/services/google/: auth.ts  calendar.ts  types.ts
src/services/icloud/: auth.ts  caldav.ts  conversion.ts  types.ts
src/store/: AppContext.tsx  reducer.ts  types.ts
src/types/: auth.ts  events.ts  navigation.ts
