[package]
name = "calendarchy"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
thiserror = "2.0"
urlencoding = "2.1"
quick-xml = "0.37"
base64 = "0.22"
